# space-fossils

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.sh  build_debug_win.bat  build_vs2022_solution.bat
.githooks/: pre-commit  pre-push
app/: CMakeLists.txt  app_state.cxx  app_state.hxx  cli.cxx  cli.hxx  cli_app.cxx  cli_app.hxx  cli_renderer.cxx  cli_renderer.hxx  command_dispatcher.cxx  command_dispatcher.hxx  command_parser.cxx  command_parser.hxx  command_spec.hxx  command_type.hxx  main.cxx  parse_error.hxx  parsed_command.hxx  scan_command_options.hxx
benchmarks/baselines/: scan-baselines.md
cli/: CMakeLists.txt  app_state.cxx  cli_app.cxx  cli_renderer.cxx  command_dispatcher.cxx  command_parser.cxx
cli/include/space_fossils/cli/: app_state.hxx  cli_app.hxx  cli_renderer.hxx  command_dispatcher.hxx  command_parser.hxx  command_result.hxx  command_spec.hxx  command_type.hxx  parse_error.hxx  parsed_command.hxx  scan_command_options.hxx
core/: CMakeLists.txt  file_scanner.cxx  file_tree.cxx  file_tree_navigator.cxx  file_tree_node.cxx  operation_timer.cxx  size_formatter.cxx
core/file_tree/: name_pool.cxx  node_pool.cxx  scan_coordinator.cxx  scan_scheduler.cxx  scan_sheduler.cxx  scanner.cxx  session.cxx  snapshot_reader.cxx  snapshot_writer.cxx  storage.cxx  text_report_writer.cxx  tree_query.cxx
core/file_tree/memory/: name_pool.cxx  node_pool.cxx
core/file_tree/query/: tree_query.cxx
core/file_tree/report/: text_writer.cxx
core/file_tree/scan/: coordinator.cxx  operations.cxx  planner.cxx  scanner.cxx  scheduler.cxx
core/file_tree/session/: session.cxx  session_operations.cxx
core/file_tree/snapshot/: binary_reader.cxx  binary_writer.cxx  operations.cxx  reader.cxx  writer.cxx
core/file_tree/storage/: storage.cxx
core/include/space_fossils/: file_scanner.hxx  file_tree.hxx  file_tree_navigator.hxx  file_tree_node.hxx  scan_summary.hxx  size_formatter.hxx
core/include/space_fossils/core/: operation_timer.hxx  size_formatter.hxx  version.hxx
core/include/space_fossils/core/file_tree/memory/: name_pool.hxx  node_pool.hxx
core/include/space_fossils/core/file_tree/model/: default_constants.hxx  node.hxx  tree_metadata.hxx  tree_pool_bundle.hxx  types.hxx
core/include/space_fossils/core/file_tree/query/: tree_query.hxx
core/include/space_fossils/core/file_tree/report/: text_writer.hxx
core/include/space_fossils/core/file_tree/scan/: apply_result.hxx  coordinator.hxx  job.hxx  operations.hxx  planner.hxx  planning_config.hxx  scan_input.hxx  scanner.hxx  scheduler.hxx  summary.hxx
core/include/space_fossils/core/file_tree/session/: session.hxx  session_operations.hxx
core/include/space_fossils/core/file_tree/snapshot/: binary_reader.hxx  binary_writer.hxx  constants.hxx  operations.hxx  reader.hxx  writer.hxx
core/include/space_fossils/core/file_tree/storage/: storage.hxx  storage_change.hxx
core/include/space_fossils/file_tree/: change_type.hxx  default_constants.hxx  name_pool.hxx  node.hxx  node_pool.hxx  scan_coordinator.hxx  scan_coordinator_config.hxx  scan_job.hxx  scan_request.hxx  scan_scheduler.hxx  scan_sheduler.hxx  scanner.hxx  session.hxx  snapshot_reader.hxx  snapshot_writer.hxx  storage.hxx  storage_change.hxx  text_report_writer.hxx  tree_pool_bundle.hxx  tree_query.hxx  types.hxx
core/include/space_fossils/file_tree/memory/: name_pool.hxx
core/include/space_fossils/file_tree/model/: default_constants.hxx  node.hxx  node_handle.hxx  tree_pool_bundle.hxx
core/include/space_fossils/file_tree/query/: tree_query.hxx
core/include/space_fossils/file_tree/report/: text_writer.hxx
core/include/space_fossils/file_tree/scan/: apply_result.hxx  coordinator.hxx  job.hxx  operations.hxx  planner.hxx  planning_config.hxx  scan_input.hxx  scanner.hxx  scheduler.hxx  summary.hxx
core/include/space_fossils/file_tree/session/: session.hxx  session_operations.hxx
core/include/space_fossils/file_tree/snapshot/: operations.hxx  reader.hxx  writer.hxx
core/include/space_fossils/file_tree/storage/: storage.hxx  storage_change.hxx
core/include/space_fossils/memory/: memory_arena.hxx
core/memory/: memory_arena.cxx
scripts/: _presets.sh  build_and_test_debug.sh  build_and_test_release.sh  build_debug.sh  build_release.sh  configure_debug.sh  configure_release.sh  test_debug.sh  test_release.sh
tests/: CMakeLists.txt  app_state_tests.cxx  basic_tests.cxx  cli_app_tests.cxx  cli_renderer_tests.cxx  command_dispatcher_tests.cxx  command_parser_tests.cxx  file_scanner_tests.cxx  file_tree_navigator_tests.cxx  file_tree_node_pool_tests.cxx  file_tree_node_tests.cxx  file_tree_scan_coordinator_tests.cxx  file_tree_scan_operations_tests.cxx  file_tree_scan_planner_tests.cxx  file_tree_scan_scheduler_tests.cxx  file_tree_scanner_tests.cxx  file_tree_session_operations_tests.cxx  file_tree_session_tests.cxx  file_tree_snapshot_binary_reader_tests.cxx  file_tree_snapshot_binary_writer_tests.cxx  file_tree_snapshot_operations_tests.cxx  file_tree_snapshot_reader_tests.cxx  file_tree_snapshot_writer_tests.cxx  file_tree_storage_tests.cxx  file_tree_tests.cxx  file_tree_text_report_writer_tests.cxx  file_tree_tree_query_tests.cxx  main_tests.cxx  memory_arena_tests.cxx  name_pool_tests.cxx  operation_timer_tests.cxx  size_formatter_tests.cxx  tests.cxx
tests/fixtures/file_scanner/empty/: README.txt
tests/fixtures/file_scanner/invalid-path/: README.txt
tests/fixtures/file_scanner/non-empty/: README.txt
tests/fixtures/file_scanner/single-file/: README.txt
tests/include/space_fossils_tests/: micro_test_framework.hxx  tests.hxx
